--- a/blog.html
+++ b/blog.html
@@ -10,15 +10,16 @@
 <body>
     <header>
         <h1>Blog Posts</h1>
-        <button id="modeToggle">Toggle Light/Dark Mode</button>
+        <button id="toggleMode">Toggle Light/Dark Mode</button>
     </header>
     <main>
-        <div id="posts"></div>
         <button id="backButton">Back</button>
+        <section id="posts"></section>
     </main>
     <footer>
-        <p>Developer's Portfolio: <a href="#">Your Portfolio Link</a></p>
+        <p><a href="https://portfolio.example.com">Developer's Portfolio</a></p>
     </footer>
     <script src="assets/js/blog.js"></script>
+    <script src="assets/js/logic.js"></script>
 </body>
 </html>
