--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
         <section id="posts"></section>
     </main>
     <footer>
-        <p><a href="https://portfolio.example.com">Developer's Portfolio</a></p>
+        <p><a href="https://jimil555.github.io/My-Project_-2/" target="_blank">Developer's Portfolio</a></p>
     </footer>
     <script src="assets/js/blog.js"></script>
     <script src="assets/js/logic.js"></script>
